<?xml version="1.0" encoding="utf-8"?>
<!--eric agustian winardi 1822250025-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="10dp"
        app:contentPadding="5dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:elevation="200dp">

            <ImageView
                android:id="@+id/iv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:contentDescription="@string/todo"
                android:padding="5dp" />

            <TextView
                android:id="@+id/tvId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv"
                android:layout_alignParentEnd="true"
                android:hint="@string/id"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvId"
                android:hint="@string/nama"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvDaerah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvNama"
                android:layout_marginTop="10dp"
                android:hint="@string/daerah"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDaerah"
                android:layout_marginTop="10dp"
                android:hint="@string/terendah"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDaerah"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:hint="@string/tertinggi"
                android:textSize="17sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>